--- a/src/components/ButtonCss.css
+++ b/src/components/ButtonCss.css
@@ -11,11 +11,11 @@
     color: #FFFFFF;
     display: flex;
     font-family: Phantomsans, sans-serif;
-    font-size: 20%;
+    font-size: 55%;
     justify-content: center;
-    line-height: 1em;
-    max-width: 15%;
-    min-width: 5%;
+    line-height: 2em;
+    max-width: 5rem;
+    min-width: 1rem;
     padding: 3px;
     text-decoration: none;
     user-select: none;
@@ -45,7 +45,7 @@
 
 @media (min-width: 768px) {
     .button-64 {
-        font-size: 70%;
-        min-width: 10%;
+        font-size: 1rem;
+        min-width: 20%;
     }
 }
