--- a/src/components/ButtonCss.css
+++ b/src/components/ButtonCss.css
@@ -49,3 +49,53 @@
         min-width: 20%;
     }
 }
+
+
+.about {
+    align-items: center;
+    background-image: linear-gradient(144deg,#a23cf0, #d8b1f7 50%,#a23cf0);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 55%;
+    justify-content: center;
+    line-height: 2em;
+    max-width: 5rem;
+    min-width: 1rem;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.about:active,
+.about:hover {
+    outline: 0;
+}
+
+.about span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    width: 15%;
+    height: auto;
+    transition: 300ms;
+}
+
+.about:hover span {
+    background: none;
+}
+
+@media (min-width: 768px) {
+    .about {
+        font-size: 1rem;
+        min-width: 20%;
+    }
+}
